--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .vs/EchoPractice4Test/DesignTimeBuild/.dtbcache
 obj/Debug/netcoreapp3.1/EchoPractice4Test.csproj.CopyComplete
 obj/Debug/netcoreapp3.1/EchoPractice4Test.csproj.FileListAbsolute.txt
+*.ide-shm
+*.ide-wal
